[project]
name = "vectorvocab"
version = "0.2.0"
description = "Local word vector mathematics with Ollama - 100% private, 100% free"
authors = [
    { name = "VectorVocab contributors" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["embeddings", "word2vec", "nlp", "ai", "ollama", "local", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vectorvocab"
Documentation = "https://github.com/yourusername/vectorvocab#readme"
Repository = "https://github.com/yourusername/vectorvocab"

[project.scripts]
vectorvocab = "vectorvocab:main"
vectorvocab-interactive = "interactive:main"
vectorvocab-examples = "examples:main"
vectorvocab-convergence = "vector_convergence:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Set the maximum line length to 100
line-length = 100

# Assume Python 3.8+
target-version = "py38"

# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PL",     # pylint
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["vectorvocab"]

[tool.ruff.lint.pylint]
max-args = 7

